Serve files without extension

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -7,10 +7,13 @@ server {
     # Server name
 	server_name localhost;
 
+    # Content root
+    root /opt/app-root/src;
+
     # Routing
 	location / {
-        root   /opt/app-root/src;
         index  index.html index.html;
+        try_files $uri $uri/ $uri.html index.html;
 	}
 
 }
